@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-1962] explicit 'not monitored' response for active agents on disabled hosts (asaveljevs)
  - [ZBX-1522] fixed server crash on an undefined user macro (asaveljevs)
  - [ZBX-2039] fixed pattern matching in function count (asaveljevs)
  - [ZBXNEXT-119] added support for time shifted functions (asaveljevs)
